--- a/src/view/main.fxml
+++ b/src/view/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -104,10 +105,27 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <Button layoutX="476.0" layoutY="206.0" mnemonicParsing="false" onAction="#buttonActionLoan" prefHeight="60.0" prefWidth="132.0" text="Relatorio" />
-                              <Button layoutX="48.0" layoutY="103.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="132.0" text="Novo" />
-                              <Button layoutX="48.0" layoutY="206.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="132.0" text="Editar" />
-                              <Button layoutX="476.0" layoutY="103.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="132.0" text="Excluir" />
+                              <Button layoutX="285.0" layoutY="423.0" mnemonicParsing="false" onAction="#buttonActionLoan" prefHeight="60.0" prefWidth="132.0" text="Relatorio" />
+                              <Button layoutX="554.0" layoutY="101.0" mnemonicParsing="false" onAction="#adminButtonNew" prefHeight="60.0" prefWidth="132.0" text="Novo" />
+                              <Button layoutX="554.0" layoutY="178.0" mnemonicParsing="false" onAction="#adminButtonEdit" prefHeight="60.0" prefWidth="132.0" text="Editar" />
+                              <Button layoutX="554.0" layoutY="254.0" mnemonicParsing="false" onAction="#adminButtonDelete" prefHeight="60.0" prefWidth="132.0" text="Excluir" />
+                              <TableView fx:id="tableAdmin" layoutX="31.0" layoutY="99.0" prefHeight="217.0" prefWidth="513.0">
+                                <columns>
+                                  <TableColumn fx:id="adminName" prefWidth="157.0" text="Nome" />
+                                  <TableColumn fx:id="adminEmail" prefWidth="187.0" text="Email" />
+                                    <TableColumn fx:id="adminUser" prefWidth="168.0" text="Nome de Usuario" />
+                                </columns>
+                              </TableView>
+                              <Label layoutX="219.0" layoutY="28.0" text="Administradores">
+                                 <font>
+                                    <Font size="32.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="99.0" layoutY="351.0" text="Vizualizar historico  das chaves">
+                                 <font>
+                                    <Font size="32.0" />
+                                 </font>
+                              </Label>
                            </children></AnchorPane>
                     </content>
                   </Tab>
